--- a/estilos/menu.css
+++ b/estilos/menu.css
@@ -78,6 +78,7 @@ body {
 .menu-item:hover .dodecahedron {
     transform: rotate(15deg) scale(1.1);
     background-color: #2980b9;
+    background-image: href="../imagen/redes.jpeg"
    
 }
 .menu-item1:hover .dodecahedron {
